--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    과제 끝!!!!!! 이 아니라 또 수정!!!ㅎ !! 수정수정
-</body>
-</html>
+<html><head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <h1>자기소개서</h1>
+    <div>
+      안녕하세요 제 이름은 <strong>---!!!!!</strong> 부족하지만 수정해보았습니다. 
+    </div>
+    <h2>좋아하는 음식</h2>
+    <ul>
+      <li>라볶이</li>
+      <li>회</li>
+      <li>짬뽕</li>
+    </ul>
+    <h2>좋아하는 가수</h2>
+    <img src="https://pbs.twimg.com/media/E_OPRLmVIAEXVPr.jpg" width="300/">
+    <div>BTS</div>
+    <a href="https://youtu.be/U0gaYpGfKRo">BTS 공연 보러가기</a>
+    <h2>좋아하는 노래</h2>
+    <h2>그냥 이노래 맘에 들어서요</h2>
+    <!-- <audio src="/assets/니가모르게.m4a" controls preload="auto" autobuffer></audio> -->
+    <audio controls="controls">
+    <source src="/assets/ready.mp3" type="audio/mp3">
+</audio>
+    <a href="https://htmlreference.io/element/audio/">오디오 넣는법 보기</a>
+    <h2>인적사항</h2>
+    <table border="1">
+      <tbody><tr>
+        <th>질문</th>
+        <th>답변</th>
+      </tr>
+      
+      <tr>
+        <td>사는곳?</td>
+        <td>니 마음속</td>
+      </tr>
+      <tr>
+        <td>나이?</td>
+        <td>17살</td>
+      </tr>
+    </tbody></table>
+    테이블 쓰는 방법을 모르겠다고? <u>그럼 검색해봐!</u>
+    <h2>연락&amp;문의</h2>
+    <input type="type" placeholder="궁금한 사항을 써주세요">
+    <button>전송
+
+  
+</button></body></html>
