--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="https://youtu.be/U0gaYpGfKRo">BTS 공연 보러가기</a>
     <h2>좋아하는 노래</h2>
     <h2>그냥 이노래 맘에 들어서요</h2>
-    <!-- <audio src="/assets/니가모르게.m4a" controls preload="auto" autobuffer></audio> -->
+    <!-- <audio src="/assets/니가모르게.mp3" controls preload="auto" autobuffer></audio> -->
     <audio controls="controls">
     <source src="/assets/ready.mp3" type="audio/mp3">
 </audio>
